--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ executors:
     machine:
       image: ubuntu-2404:2024.11.1
       docker_layer_caching: true
-    resource_class: arm.large
+    resource_class: large
 
 jobs:
   jdk25:
@@ -28,7 +28,7 @@ jobs:
       - run:
           name: "Build with Maven"
           command: |
-            mvn clean install -Dmaven.compiler.release=25 -P dev -DskipTests -B
+            mvn clean install -P dev -DskipTests -B
 workflows:
   maven-build:
     jobs:
