--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run:
           name: "Build with Maven"
           command: |
-            mvn clean install -P dev -DskipTests -B
+            # mvn clean install -P dev -DskipTests -B
 workflows:
   maven-build:
     jobs:
