--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
             sudo tar -xzf graalvm-jdk-25_linux-x64_bin.tar.gz
             GRAALVM_HOME=$(pwd)/graalvm-jdk-25*
             sudo echo "export GRAALVM_HOME=${GRAALVM_HOME}" >> $BASH_ENV
+            sudo echo "export JAVA_HOME=${GRAALVM_HOME}" >> $BASH_ENV
             sudo echo "export PATH=${GRAALVM_HOME}/bin:$PATH" >> $BASH_ENV
             source $BASH_ENV
       - run:
@@ -30,6 +31,7 @@ jobs:
             MAVEN_VERSION="3.9.11"
             sudo wget https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz
             sudo tar -zxvf apache-maven-${MAVEN_VERSION}-bin.tar.gz
+            sudo echo "export MAVEN_HOME=$PWD/apache-maven-${MAVEN_VERSION}" >> $BASH_ENV
             sudo echo "export PATH=$PWD/apache-maven-${MAVEN_VERSION}/bin:$PATH" >> $BASH_ENV
             source $BASH_ENV
       - run:
