feat: 升级maven版本至3.9.11，修复ci报错

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,10 +20,9 @@ jobs:
             GRAALVM_URL="https://download.oracle.com/graalvm/25/latest/graalvm-jdk-25_linux-x64_bin.tar.gz"
             sudo wget ${GRAALVM_URL}
             sudo tar -xzf graalvm-jdk-25_linux-x64_bin.tar.gz
-            GRAALVM_HOME=$(pwd)/graalvm-jdk-25*
-            sudo echo "export GRAALVM_HOME=${GRAALVM_HOME}" >> $BASH_ENV
-            sudo echo "export JAVA_HOME=${GRAALVM_HOME}" >> $BASH_ENV
-            sudo echo "export PATH=${GRAALVM_HOME}/bin:$PATH" >> $BASH_ENV
+            sudo echo "export GRAALVM_HOME=$PWD/graalvm-jdk-25*" >> $BASH_ENV
+            sudo echo "export JAVA_HOME=$PWD/graalvm-jdk-25*" >> $BASH_ENV
+            sudo echo "export PATH=$PWD/graalvm-jdk-25*/bin:$PATH" >> $BASH_ENV
             source $BASH_ENV
       - run:
           name: Install specific Maven version
