--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ executors:
       TERM: dumb
     machine:
       image: ubuntu-2404:2024.11.1
+      docker_layer_caching: true
     resource_class: large
 
 jobs:
@@ -34,8 +35,6 @@ jobs:
       - run:
           name: Build with Maven
           command: |
-            mvn -v
-            java -version
             mvn clean install -P dev -DskipTests -B
 workflows:
   maven-build:
