--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -59,8 +59,7 @@ jobs:
       - name: Build Nacos Native Image
         run: |
           cd /home/runner/work/KCloud-Platform-IoT/KCloud-Platform-IoT/laokou-cloud/laokou-nacos
-          mvnd spring-boot:process-aot
-          mvnd -Pnative native:build -DskipTests -B
+          mvnd clean install -P dev -DskipTests -B -Pnative -Pnative-linux64
       - name: Build the Docker image
         run: |
           # 登录阿里云镜像仓库
