--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,9 +27,9 @@ jobs:
           wget https://downloads.apache.org/maven/mvnd/${MVND_VERSION}/maven-mvnd-${MVND_VERSION}-linux-amd64.zip
           unzip maven-mvnd-${MVND_VERSION}-linux-amd64.zip
           echo "${PWD}/maven-mvnd-${MVND_VERSION}-linux-amd64/bin" >> $GITHUB_PATH
-      - name: Build Nacos Native Image
+      - name: Build Auth Native Image
         run: |
-          cd /home/runner/work/KCloud-Platform-IoT/KCloud-Platform-IoT/laokou-cloud/laokou-nacos
+          cd /home/runner/work/KCloud-Platform-IoT/KCloud-Platform-IoT/laokou-service/laokou-auth/laokou-auth-start
           mvnd clean install -P dev -DskipTests -B native:build
       - name: Test with Maven Mvnd
         run: mvnd clean test -P dev
