--- a/laokou-service/laokou-oss/laokou-oss-proto/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-proto/pom.xml
@@ -37,6 +37,16 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>io.spring.javaformat</groupId>
+        <artifactId>spring-javaformat-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>default</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
