--- a/pom.xml
+++ b/pom.xml
@@ -77,24 +77,38 @@
     <spring-boot.version>3.5.6</spring-boot.version>
     <!--spring-cloud版本-->
     <spring-cloud.version>2025.0.0</spring-cloud.version>
-    <!--spring-framework版本-->
-    <spring-framework.version>6.2.11</spring-framework.version>
     <!--cloud-alibaba版本-->
     <spring-cloud-alibaba.version>2025.0.0.0-preview</spring-cloud-alibaba.version>
+    <!--spring-framework版本-->
+    <spring-framework.version>6.2.11</spring-framework.version>
+    <!--spring-data版本-->
+    <spring-data.version>2025.0.4</spring-data.version>
+    <!--spring-security版本-->
+    <spring-security.version>6.5.5</spring-security.version>
+    <!--spring-ai版本-->
+    <spring-ai.version>1.0.2</spring-ai.version>
+    <!--spring-ai-alibaba版本-->
+    <spring-ai-alibaba.version>1.0.0.4</spring-ai-alibaba.version>
+    <!--dubbo版本-->
+    <dubbo.version>3.3.5</dubbo.version>
     <!--springdoc-openapi版本-->
     <springdoc-openapi.version>2.8.13</springdoc-openapi.version>
     <!--testcontainers版本-->
     <testcontainers.version>1.21.3</testcontainers.version>
-    <!--dubbo版本-->
-    <dubbo.version>3.3.5</dubbo.version>
+    <!--vertx版本-->
+    <vertx.version>5.0.4</vertx.version>
+    <!--mybatis-plus版本 -->
+    <mybatis-plus.version>3.5.14</mybatis-plus.version>
+    <!--protobuf版本-->
+    <protobuf.version>3.25.8</protobuf.version>
+    <!--nacos版本-->
+    <nacos.version>3.1.0</nacos.version>
     <!--lombok版本-->
     <lombok.version>1.18.42</lombok.version>
     <!--postgresql版本-->
     <postgresql.version>42.7.8</postgresql.version>
     <!--admin版本-->
     <spring-boot-admin.version>3.5.5</spring-boot-admin.version>
-    <!--mybatis-plus版本 -->
-    <mybatis-plus.version>3.5.14</mybatis-plus.version>
     <!--redisson版本-->
     <redisson.version>3.52.0</redisson.version>
     <!--jsoup版本-->
@@ -143,8 +157,6 @@
     <transmittable-thread-local.version>2.14.5</transmittable-thread-local.version>
     <!--mockito版本-->
     <mockito.version>5.20.0</mockito.version>
-    <!--nacos版本-->
-    <nacos.version>3.1.0</nacos.version>
     <!--knife4j版本-->
     <knife4j.version>4.5.0</knife4j.version>
     <!--taos-jdbcdriver版本-->
@@ -155,8 +167,6 @@
     <browscap-java.version>1.5.1</browscap-java.version>
     <!--liquibase-core版本-->
     <liquibase-core.version>4.33.0</liquibase-core.version>
-    <!--protobuf-java版本-->
-    <protobuf-java.version>3.25.8</protobuf-java.version>
     <!--grpc版本-->
     <grpc.version>1.75.0</grpc.version>
     <!--proto-google-common-protos版本-->
@@ -197,26 +207,14 @@
     <wiremock.version>4.0.0-beta.15</wiremock.version>
     <!--commons-net版本-->
     <commons-net.version>3.12.0</commons-net.version>
-    <!--vertx版本-->
-    <vertx.version>5.0.4</vertx.version>
-    <!--springdoc-openapi版本-->
-    <springdoc-openapi.version>2.8.13</springdoc-openapi.version>
     <!--jSerialComm版本-->
     <jSerialComm.version>2.11.2</jSerialComm.version>
     <!--californium版本-->
     <californium.version>4.0.0-M6</californium.version>
     <!--jsoup版本-->
     <jsoup.version>1.21.2</jsoup.version>
-    <!--dubbo版本-->
-    <dubbo.version>3.3.5</dubbo.version>
     <!--minio版本-->
     <minio.version>8.6.0</minio.version>
-    <!--spring-security版本-->
-    <spring-security.version>6.5.5</spring-security.version>
-    <!--spring-ai-alibaba版本-->
-    <spring-ai-alibaba.version>1.0.0.4</spring-ai-alibaba.version>
-    <!--spring-ai版本-->
-    <spring-ai.version>1.0.2</spring-ai.version>
     <!--mysql版本-->
     <mysql-connector-j.version>9.4.0</mysql-connector-j.version>
     <!--modbus4j版本-->
@@ -264,7 +262,7 @@
       <!-- =============================== 定义 Spring Boot 版本 =============================== -->
       <dependency>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
+        <artifactId>spring-boot-dependencies</artifactId>
         <version>${spring-boot.version}</version>
         <type>pom</type>
         <scope>import</scope>
@@ -301,10 +299,60 @@
       </dependency>
       <!-- =============================== 定义 Spring Framework 版本 =============================== -->
 
+      <!-- =============================== 定义 Spring Data 版本 =============================== -->
+      <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-bom</artifactId>
+        <version>${spring-data.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- =============================== 定义 Spring Data 版本 =============================== -->
+
+      <!-- =============================== 定义 Spring Security 版本 =============================== -->
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-bom</artifactId>
+        <version>${spring-security.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- =============================== 定义 Spring Security 版本 =============================== -->
+
+      <!-- =============================== 定义 Spring Ai 版本 =============================== -->
+      <dependency>
+        <groupId>org.springframework.ai</groupId>
+        <artifactId>spring-ai-bom</artifactId>
+        <version>${spring-ai.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- =============================== 定义 Spring Ai 版本 =============================== -->
+
+      <!-- =============================== 定义 Spring Ai Alibaba 版本 =============================== -->
+      <dependency>
+        <groupId>com.alibaba.cloud.ai</groupId>
+        <artifactId>spring-ai-alibaba-bom</artifactId>
+        <version>${spring-ai-alibaba.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- =============================== 定义 Spring Ai Alibaba 版本 =============================== -->
+
+      <!-- =============================== 定义 Dubbo 版本 =============================== -->
+      <dependency>
+        <groupId>org.apache.dubbo</groupId>
+        <artifactId>dubbo-bom</artifactId>
+        <version>${dubbo.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- =============================== 定义 Dubbo 版本 =============================== -->
+
       <!-- =============================== 定义 Springdoc Openapi 版本 =============================== -->
       <dependency>
         <groupId>org.springdoc</groupId>
-        <artifactId>springdoc-openapi</artifactId>
+        <artifactId>springdoc-openapi-bom</artifactId>
         <version>${springdoc-openapi.version}</version>
         <type>pom</type>
         <scope>import</scope>
@@ -321,19 +369,45 @@
       </dependency>
       <!-- =============================== 定义 Testcontainers 版本 =============================== -->
 
-      <!-- =============================== Mongodb =============================== -->
+      <!-- =============================== 定义 Vert.x 版本 =============================== -->
       <dependency>
-        <groupId>org.springframework.data</groupId>
-        <artifactId>spring-data-mongodb</artifactId>
-        <version>${mongodb.version}</version>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-dependencies</artifactId>
+        <version>${vertx.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
-      <!-- =============================== Mongodb =============================== -->
+      <!-- =============================== 定义 Vert.x 版本 =============================== -->
 
+      <!-- =============================== 定义 Mybatis Plus 版本 =============================== -->
       <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-data-jpa</artifactId>
-        <version>${spring-boot.version}</version>
+        <groupId>com.baomidou</groupId>
+        <artifactId>mybatis-plus-bom</artifactId>
+        <version>${mybatis-plus.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
+      <!-- =============================== 定义 Mybatis Plus 版本 =============================== -->
+
+      <!-- =============================== 定义 Protobuf 版本 =============================== -->
+      <dependency>
+        <groupId>com.google.protobuf</groupId>
+        <artifactId>protobuf-bom</artifactId>
+        <version>${protobuf.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- =============================== 定义 Protobuf 版本 =============================== -->
+
+      <!-- =============================== 定义 Nacos 版本 =============================== -->
+      <dependency>
+        <groupId>com.alibaba.nacos</groupId>
+        <artifactId>nacos-all</artifactId>
+        <version>${nacos.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- =============================== 定义 Nacos 版本 =============================== -->
 
       <!-- =============================== Fastjson =============================== -->
       <dependency>
@@ -345,49 +419,11 @@
 
       <!-- =============================== Redis =============================== -->
       <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-data-redis</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-      <dependency>
         <groupId>org.redisson</groupId>
         <artifactId>redisson</artifactId>
         <version>${redisson.version}</version>
       </dependency>
       <!-- =============================== Redis =============================== -->
-
-      <!-- =============================== Spring-Ai & Spring-Ai-Alibaba =============================== -->
-      <dependency>
-        <groupId>org.springframework.ai</groupId>
-        <artifactId>spring-ai-autoconfigure-model-openai</artifactId>
-        <version>${spring-ai.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.ai</groupId>
-        <artifactId>spring-ai-autoconfigure-model-chat-client</artifactId>
-        <version>${spring-ai.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.ai</groupId>
-        <artifactId>spring-ai-starter-mcp-client-webflux</artifactId>
-        <version>${spring-ai.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.ai</groupId>
-        <artifactId>spring-ai-starter-mcp-server-webflux</artifactId>
-        <version>${spring-ai.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.alibaba.cloud.ai</groupId>
-        <artifactId>spring-ai-alibaba-starter-mcp-registry</artifactId>
-        <version>${spring-ai-alibaba.version}</version>
-      </dependency>
-      <!-- =============================== Spring-Ai & Spring-Ai-Alibaba =============================== -->
 
       <dependency>
         <groupId>com.github.infiniteautomation</groupId>
@@ -400,49 +436,9 @@
         <version>${mysql-connector-j.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.springframework.security</groupId>
-        <artifactId>spring-security-oauth2-core</artifactId>
-        <version>${spring-security.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.security</groupId>
-        <artifactId>spring-security-core</artifactId>
-        <version>${spring-security.version}</version>
-      </dependency>
-      <dependency>
         <groupId>io.minio</groupId>
         <artifactId>minio</artifactId>
         <version>${minio.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-actuator-autoconfigure</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.protobuf</groupId>
-        <artifactId>protobuf-java</artifactId>
-        <version>${protobuf-java.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.protobuf</groupId>
-        <artifactId>protobuf-java-util</artifactId>
-        <version>${protobuf-java.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.dubbo</groupId>
-        <artifactId>dubbo-spring-boot-starter</artifactId>
-        <version>${dubbo.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.dubbo</groupId>
-        <artifactId>dubbo-nacos-spring-boot-starter</artifactId>
-        <version>${dubbo.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-undertow</artifactId>
-        <version>${spring-boot.version}</version>
       </dependency>
       <dependency>
         <groupId>org.jsoup</groupId>
@@ -455,50 +451,9 @@
         <version>${californium.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-pulsar-reactive</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-pulsar</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-      <dependency>
         <groupId>com.fazecast</groupId>
         <artifactId>jSerialComm</artifactId>
         <version>${jSerialComm.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-autoconfigure</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.springdoc</groupId>
-        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-        <version>${springdoc-openapi.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.vertx</groupId>
-        <artifactId>vertx-mqtt</artifactId>
-        <version>${vertx.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.vertx</groupId>
-        <artifactId>vertx-web</artifactId>
-        <version>${vertx.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.vertx</groupId>
-        <artifactId>vertx-core</artifactId>
-        <version>${vertx.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-net</groupId>
@@ -554,21 +509,6 @@
         <groupId>com.github.ben-manes.caffeine</groupId>
         <artifactId>caffeine</artifactId>
         <version>${caffeine.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.baomidou</groupId>
-        <artifactId>mybatis-plus-extension</artifactId>
-        <version>${mybatis-plus.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.baomidou</groupId>
-        <artifactId>mybatis-plus-jsqlparser</artifactId>
-        <version>${mybatis-plus.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        <version>${spring-boot.version}</version>
       </dependency>
       <dependency>
         <groupId>io.opentelemetry</groupId>
@@ -686,26 +626,6 @@
         <version>${postgresql.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.alibaba.nacos</groupId>
-        <artifactId>nacos-client</artifactId>
-        <version>${nacos.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.alibaba.nacos</groupId>
-        <artifactId>nacos-api</artifactId>
-        <version>${nacos.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.alibaba.nacos</groupId>
-        <artifactId>nacos-common</artifactId>
-        <version>${nacos.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-aop</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-      <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
         <version>${jackson.version}</version>
@@ -776,21 +696,6 @@
         <version>${netty.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-test</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-webflux</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-        <version>${spring-boot.version}</version>
-      </dependency>
-      <dependency>
         <groupId>org.springframework.kafka</groupId>
         <artifactId>spring-kafka</artifactId>
         <version>${spring-kafka.version}</version>
@@ -839,11 +744,6 @@
         <version>${spring-boot-admin.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.baomidou</groupId>
-        <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
-        <version>${mybatis-plus.version}</version>
-      </dependency>
-      <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>${guava.version}</version>
@@ -884,11 +784,6 @@
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-oauth2-authorization-server</artifactId>
         <version>${spring-security-oauth2-authorization-server.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
-        <version>${spring-boot.version}</version>
       </dependency>
       <!-- =============================== Spring-Authorization-Server =============================== -->
 
